# life4

./: CMakeLists.txt  README.txt  configure.h.in  main.cpp
core/: CMakeLists.txt
core/data/: AnalogicIO.cpp  AnalogicIO.hpp  CMakeLists.txt  CommonIO.hpp  Cylinder.cpp  Cylinder.hpp  DigitalIO.cpp  DigitalIO.hpp  LaserBaseProfile.cpp  LaserBaseProfile.hpp  LaserDutyProfile.cpp  LaserDutyProfile.hpp  LaserPulsedProfile.cpp  LaserPulsedProfile.hpp  MachineParameters.cpp  MachineParameters.hpp  Parameters.hpp  Profile.hpp  SimpleIO.hpp
core/devices/: AbstractDevice.hpp  AbstractLaser.hpp  CMakeLists.txt
core/logic/: CMakeLists.txt  ParametersManager.cpp  ParametersManager.hpp
global/: CMakeLists.txt
global/utils/: CMakeLists.txt  MathUtils.hpp  Utility.hpp
profile/: CMakeLists.txt  LaserBaseProfile.cpp  LaserBaseProfile.hpp  LaserDutyProfile.cpp  LaserDutyProfile.hpp  LaserPulsedProfile.cpp  LaserPulsedProfile.hpp  Profile.hpp
ui/: CMakeLists.txt  CylinderDialog.cpp  CylinderDialog.hpp  CylinderDialog.ui  DigitalIOPage.cpp  DigitalIOPage.hpp  DigitalIOPage.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PreferencesPage.cpp  PreferencesPage.hpp  PreferencesPage.ui  SettingsPage.cpp  SettingsPage.hpp  SettingsPage.ui  resources.qrc
ui/lang/: CMakeLists.txt
ui/languages/: CMakeLists.txt
ui/styles/: CMakeLists.txt  style1.qss  test1.qss  test2.qss
ui/widgets/: CMakeLists.txt  DoubleLineEdit.cpp  DoubleLineEdit.hpp  IntLineEdit.cpp  IntLineEdit.hpp  LComboBox.cpp  LComboBox.hpp  LineEditValidated.cpp  LineEditValidated.hpp  SpinboxNoButtons.cpp  SpinboxNoButtons.hpp  UnmovableDialog.hpp  UnmovableMainWindow.hpp
utils/: CMakeLists.txt  MathUtils.hpp  Utility.hpp
