PROJECT(LIFE)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
INCLUDE(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)

SET(LIFE_VERSION 4.0.1)

IF(COMPILER_SUPPORTS_CXX11)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF()

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-reorder -Wno-long-long -pedantic -fPIC")
SET(CMAKE_VERBOSE_MAKEFILE TRUE)


FIND_PACKAGE(TIFF REQUIRED)
MESSAGE("TIFF_LIBRARIES = ${TIFF_LIBRARIES}")

FIND_PACKAGE(Qt5Widgets REQUIRED)
MESSAGE("Qt5Widgets_INCLUDE_DIRS: ${Qt5Widgets_INCLUDE_DIRS}")

FIND_PACKAGE(Qt5Core REQUIRED)
MESSAGE("Qt5Core_INCLUDE_DIRS: ${Qt5Core_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES(${Qt5Core_INCLUDE_DIRS} ${Qt5Widgets_INCLUDE_DIRS})

SET(PROJECT_SOURCES "" CACHE INTERNAL "sources of project")
SET(PROJECT_HEADERS "" CACHE INTERNAL "header of project")

SET(PPROJECT_FOLDERS
    "${PROJECT_SOURCE_DIR}/profile"
    "${PROJECT_SOURCE_DIR}/utils")

FOREACH(item ${PPROJECT_FOLDERS})
  MESSAGE("Folder: " ${item})
  INCLUDE_DIRECTORIES(${item})
  ADD_SUBDIRECTORY(${item})
ENDFOREACH(item)


MESSAGE("PROJECT_SOURCES: ${PROJECT_SOURCES}")
MESSAGE("PROJECT_HEADERS: ${PROJECT_HEADERS}")

ADD_EXECUTABLE(${PROJECT_NAME}-${LIFE_VERSION} main.cpp ${PROJECT_SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}-${LIFE_VERSION} ${TIFF_LIBRARIES} Qt5::Core)
