SET(SUBFOLDERS
    "${CMAKE_CURRENT_SOURCE_DIR}/styles"
    "${CMAKE_CURRENT_SOURCE_DIR}/languages"
)

FOREACH(FOLDER ${SUBFOLDERS})
    MESSAGE("SUBFOLDER: ${FOLDER}")
    INCLUDE_DIRECTORIES(${FOLDER})
    ADD_SUBDIRECTORY(${FOLDER})
ENDFOREACH(FOLDER)

SET(UI_CLASS_NAMES
    "MainWindow"
    "resources"
    )

FOREACH(ITEM ${UI_CLASS_NAMES})
    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.ui")
        SET(UI_FILES ${UI_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.ui")
    ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.ui")

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.hpp")
        SET(UI_HEADERS ${UI_HEADERS} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.hpp")
    ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.hpp")

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.cpp")
        SET(UI_SOURCES ${UI_SOURCES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.cpp")
    ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.cpp")

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qrc")
        SET(RCC_FILES ${RCC_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qrc")
    ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qrc")

ENDFOREACH(ITEM)


MESSAGE("UI_HEADERS: ${UI_HEADERS}")
MESSAGE("UI_SOURCES: ${UI_SOURCES}")
MESSAGE("UI_FILES: ${UI_FILES}")
MESSAGE("RCC_FILES: ${RCC_FILES}")

SET(PROJECT_SOURCES ${PROJECT_SOURCES} ${UI_SOURCES} CACHE INTERNAL "")
SET(PROJECT_HEADERS ${PROJECT_HEADERS} ${UI_HEADERS} CACHE INTERNAL "")
SET(PROJECT_UI_FILES ${PROJECT_UI_FILES} ${UI_FILES} CACHE INTERNAL "")
SET(PROJECT_RCC_FILES ${PROJECT_RCC_FILES} ${RCC_FILES} CACHE INTERNAL "")
